# AIWEB

./: .gitignore  COPILOT_INSTRUCTIONS.md  PROJECT_TODO.md  README.md  dev-all.ps1  dev-backend.ps1  dev-frontend.ps1  pyproject.toml  run.ps1
.github/workflows/: fastapi_app_tests.yml
fastapi_app/: .env.example  Dockerfile  README.md  alembic.ini  dev.ps1  docker-compose.yml  main.py  requirements.txt
fastapi_app/alembic/: README  env.py  script.py.mako
fastapi_app/alembic/versions/: .keep
fastapi_app/app/: exceptions.py  main.py
fastapi_app/app/api/: deps.py  routes.py
fastapi_app/app/core/: config.py  logging.py  security.py
fastapi_app/app/db/: init_db.py  session.py
fastapi_app/app/models/: task.py  user.py
fastapi_app/app/repositories/: task_repo.py  user_repo.py
fastapi_app/app/schemas/: auth.py  credits.py  task.py  user.py
fastapi_app/app/services/: auth_service.py  task_service.py
fastapi_app/tests/: conftest.py  test_auth_contract.py  test_e2e_sqlite.py  test_health.py  test_tasks_auth_required.py
fastapi_app/tools/: repro_register.py
frontend/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/pages/: AppLayout.tsx  Dashboard.tsx  Login.tsx  (+3 more)
ppt/: CodeLaunchAI-Pitch-Deck.pptx  generate_pitch_deck.py  requirements.txt
prompts/: ARCHITECT_MODE.txt  BACKEND_GENERATOR.txt  CODE_VALIDATOR.txt  FRONTEND_GENERATOR.txt  PATCH_MODE.txt
src/aiweb_gen/: cli.py  diffapply.py  flow.py  fsops.py  llm.py  parsing.py  prompts.py
(+10 files in other folders)
