[project]
name = "aiweb-gen"
version = "0.1.0"
description = "Focused AI App Generator orchestrator"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "requests>=2.32.0",
]

[project.scripts]
aiweb-gen = "aiweb_gen.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
